Fixed bug that on child Shell is counted in parent#getChildren. Fixed bug that child Shell will be override by parent Shell even with MODAL style. Fixed bug that Decorations#setVisible does not work. Fixed bug that Shell#getText does not return correct title. ...

--- a/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Menu.css
+++ b/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Menu.css
@@ -264,6 +264,6 @@
 .menu-bar-selected .menu-bar-item-hover {
 	border:1px inset white !important;
 }
-.menu-bar-item span {
+.menu-bar-item span span {
 	text-decoration:underline;
 }
